[workspace]
members = [
  "compiler/*",
  "tests",
  "tests/testing-internal",
  "tests/testing-macros",
]

# Without this, cargo complains about differing resolvers... (see cargo/#9956)
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
debug-assertions = false
overflow-checks = false

# strip any symbols from the executable, this makes backtraces un-readable
strip = false

# set debug to true when profiling
debug = false
