[package]
name = "hash"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
hash-ast = {path = "../hash-ast" }
hash-pest-parser = {path = "../hash-pest-parser" }
hash-backend = {path = "../hash-backend" } 
rustyline = "8.0.0"
thiserror = "1.0"
derive-macro = { path = "derive-macro" }
