

[package]
name = "hash-tests"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2018"

[[bin]]
name = "hashc-tests"
path = "./lib.rs"

[dependencies]
pretty_assertions = "1.2.1"
regex = "1.5.6"
rayon = "1.5.0"
lazy_static = "1.4.0"

hash-ast = { path = "../compiler/hash-ast" }
hash-source = { path = "../compiler/hash-source" }
hash-session = { path = "../compiler/hash-session" }
hash-utils = { path = "../compiler/hash-utils" }
hash-pipeline = { path = "../compiler/hash-pipeline" }
hash-reporting = { path = "../compiler/hash-reporting" }

# Various stages that the pipeline interfaces with...
hash-lexer = { path = "../compiler/hash-lexer" }
hash-parser = { path = "../compiler/hash-parser" }
hash-ast-desugaring = { path = "../compiler/hash-ast-desugaring" }
hash-ast-expand = { path = "../compiler/hash-ast-expand" }
hash-untyped-semantics = { path = "../compiler/hash-untyped-semantics" }
hash-semantics = { path = "../compiler/hash-semantics" }
hash-lower = { path = "../compiler/hash-lower" }
hash-vm = { path = "../compiler/hash-vm" }

# Internal macros the that the tester uses
hash-testing-macros = { path = "../tests/testing-macros" }
hash-testing-internal = { path = "../tests/testing-internal" }
clap = { version = "4.3.8", features = ["derive"] }
