

[package]
name = "hash-tests"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "hashc-tests"
path = "./lib.rs"
doctest = false

[dependencies]
pretty_assertions = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }

hash-ast = { workspace = true }
hash-source = { workspace = true }
hash-driver = { workspace = true }
hash-utils = { workspace = true }
hash-pipeline = { workspace = true }
hash-reporting = { workspace = true }

# Various stages that the pipeline interfaces with...
hash-lexer = { workspace = true }
hash-parser = { workspace = true }
hash-ast-desugaring = { workspace = true }
hash-ast-expand = { workspace = true }
hash-untyped-semantics = { workspace = true }
hash-semantics = { workspace = true }
hash-lower = { workspace = true }
hash-vm = { workspace = true }

# Internal macros the that the tester uses
hash-testing-macros = { workspace = true }
hash-testing-internal = { workspace = true }

[features]
default = ["llvm"]
llvm = ["hash-driver/llvm", "hash-pipeline/llvm"]

[dev-dependencies]
clap = { version = "4.5.47", features = ["derive"] }
rusty-fork = "0.3"
