[package]
name = "hash-abi"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
hash-ir = {path = "../hash-ir" }
hash-layout = {path = "../hash-layout" }
hash-source = {path = "../hash-source" }
hash-storage = {path = "../hash-storage" }
hash-target = { path = "../hash-target" }
hash-utils = {path = "../hash-utils" }
