[package]
name = "hash-ast-desugaring"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[dependencies]
hash-ast = { path = "../hash-ast" }
hash-pipeline = { path = "../hash-pipeline" }
hash-reporting = { path = "../hash-reporting" }
hash-source = { path = "../hash-source" }
hash-tree-def = { path = "../hash-tree-def" }
hash-utils =  { path = "../hash-utils" }
