[package]
name = "hash-ast-expand"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
derive_more = "0.99"

hash-ast = { path = "../hash-ast" }
hash-attrs = { path = "../hash-attrs" }
hash-fmt = { path = "../hash-fmt" }
hash-pipeline = { path = "../hash-pipeline" }
hash-reporting = { path = "../hash-reporting" }
hash-source = { path = "../hash-source" }
hash-storage = { path = "../hash-storage" }
hash-target = { path = "../hash-target" }
hash-tir = { path = "../hash-tir" }
hash-tree-def = { path = "../hash-tree-def" }
hash-utils = { path = "../hash-utils" }
