[package]
name = "hash-ast-expand"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
hash-ast = { workspace = true }
hash-ast-utils = { workspace = true }
hash-attrs = { workspace = true }
hash-repr = { workspace = true }
hash-pipeline = { workspace = true }
hash-reporting = { workspace = true }
hash-source = { workspace = true }
hash-storage = { workspace = true }
hash-target = { workspace = true }
hash-tir = { workspace = true }
hash-tree-def = { workspace = true }
hash-utils = { workspace = true }
