[package]
name = "hash-ast-passes"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[dependencies]
rayon = "1.5.0"
crossbeam-channel = "0.5.1"
if_chain = "1.0.2"

hash-ast = {path = "../hash-ast" }
hash-source = { path = "../hash-source" }
hash-pipeline = { path = "../hash-pipeline" }
hash-reporting =  { path = "../hash-reporting" }
hash-error-codes = { path = "../hash-error-codes" }
