[package]
name = "hash-ast-utils"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
num-bigint = "0.4"

hash-ast = { path = "../hash-ast" }
hash-source = { path = "../hash-source" }
hash-token = { path = "../hash-token" }
hash-utils = { path = "../hash-utils" }
hash-reporting = { path = "../hash-reporting" }
hash-const-eval = { path = "../hash-const-eval" }
hash-layout = { path = "../hash-layout" }
