[package]
name = "hash-ast-utils"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
hash-ast = { workspace = true }
hash-source = { workspace = true }
hash-token = { workspace = true }
hash-utils = { workspace = true }
hash-reporting = { workspace = true }
hash-const-eval = { workspace = true }
hash-repr = { workspace = true }
hash-storage = { workspace = true }
