[package]
name = "hash-ast"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
num-bigint = "0.4"
replace_with = "0.1.7"
once_cell = "1.17"

hash-token = { path = "../hash-token" }
hash-source = { path = "../hash-source" }
hash-tree-def = { path = "../hash-tree-def" }
hash-utils = { path = "../hash-utils" }
hash-reporting = { path = "../hash-reporting" }
