[package]
name = "hash-ast"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
replace_with = { workspace = true }
once_cell = { workspace = true }

hash-token = { workspace = true }
hash-source = { workspace = true }
hash-tree-def = { workspace = true }
hash-utils = { workspace = true }
hash-reporting = { workspace = true }
