[package]
name = "hash-attrs"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
paste = "1.0.14"

hash-ast = { path = "../hash-ast" }
hash-ast-utils = { path = "../hash-ast-utils" }
hash-error-codes = { path = "../hash-error-codes" }
hash-layout = { path = "../hash-layout" }
hash-reporting = { path = "../hash-reporting" }
hash-source = { path = "../hash-source" }
hash-storage = { path = "../hash-storage" }
hash-utils = { path = "../hash-utils" }
hash-tir = { path = "../hash-tir" }
hash-target = { path = "../hash-target" }
