[package]
name = "hash-attrs"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
paste = { workspace = true}

hash-ast = { workspace = true }
hash-ast-utils = { workspace = true }
hash-error-codes = { workspace = true }
hash-repr = { workspace = true }
hash-reporting = { workspace = true }
hash-source = { workspace = true }
hash-storage = { workspace = true }
hash-utils = { workspace = true }
hash-tir = { workspace = true }
hash-target = { workspace = true }
