[package]
name = "hash-backend"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
hash-codegen = { path = "../hash-codegen" }
hash-codegen-llvm = { path = "../hash-codegen-llvm" }
hash-ir = { path = "../hash-ir" }
hash-pipeline = { path = "../hash-pipeline" }
hash-reporting = { path = "../hash-reporting" }
hash-source = { path = "../hash-source" }
hash-target = { path = "../hash-target" }
hash-utils = { path = "../hash-utils" }

[features]
llvm = []
