[package]
name = "hash-backend"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
hash-codegen = { workspace = true }
hash-codegen-llvm = { workspace = true }
hash-codegen-vm = { workspace = true }
hash-ir = { workspace = true }
hash-pipeline = { workspace = true }
hash-reporting = { workspace = true }
hash-source = { workspace = true }
hash-target = { workspace = true }
hash-utils = { workspace = true }

[features]
llvm = []
