[package]
name = "hash-codegen-bytecode"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
hash-codegen = {path = "../hash-codegen" }
hash-ir = {path = "../hash-ir" }
hash-source = {path = "../hash-source" }
hash-utils = {path = "../hash-utils" }
