[package]
name = "hash-codegen-llvm"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
llvm-sys = "150.0.3"
inkwell = { git = "https://github.com/hash-org/inkwell.git", branch="master", features = ["llvm15-0"] }

hash-attrs = { path = "../hash-attrs" }
hash-codegen = {path = "../hash-codegen" }
hash-ir = {path = "../hash-ir" }
hash-pipeline = { path = "../hash-pipeline" }
hash-reporting = { path = "../hash-reporting" }
hash-source = {path = "../hash-source" }
hash-storage = { path = "../hash-storage" }
hash-utils = {path = "../hash-utils" }
