[package]
name = "hash-codegen-vm"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
hash-codegen = { workspace = true }
hash-ir = { workspace = true }
hash-pipeline = { workspace = true }
hash-source = { workspace = true }
hash-utils = { workspace = true }
