[package]
name = "hash-codegen"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[dependencies]
fixedbitset = "0.4.2"

hash-abi = {path = "../hash-abi" }
hash-ir = {path = "../hash-ir" }
hash-layout = {path = "../hash-layout" }
hash-pipeline = { path = "../hash-pipeline" }
hash-reporting = { path = "../hash-reporting" }
hash-source = {path = "../hash-source" }
hash-storage = { path = "../hash-storage" }
hash-target = { path = "../hash-target" }
hash-utils = {path = "../hash-utils" }
