[package]
name = "hash-codegen"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
fixedbitset = { workspace = true }

hash-abi = { workspace = true }
hash-attrs = { workspace = true }
hash-ir = { workspace = true }
hash-repr = { workspace = true }
hash-pipeline = { workspace = true }
hash-reporting = { workspace = true }
hash-source = { workspace = true }
hash-storage = { workspace = true }
hash-target = { workspace = true }
hash-utils = { workspace = true }
