 [package]
name = "hash-const-eval"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
num_enum = "0.5"
paste = "1.0.14"

hash-storage = { path = "../hash-storage" }
hash-source = { path = "../hash-source" }
hash-target = { path = "../hash-target" }
hash-utils = { path = "../hash-utils" }
hash-layout = { path = "../hash-layout" }
