[package]
name = "hash-const-eval"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
num_enum = { workspace = true }
paste = { workspace = true }

hash-storage = { workspace = true }
hash-source = { workspace = true }
hash-target = { workspace = true }
hash-utils = { workspace = true }
hash-repr = { workspace = true }
