[package]
name = "hash-driver"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
num_cpus = "1.13.0"

hash-ast = { path = "../hash-ast" }
hash-codegen = { path = "../hash-codegen" }
hash-ir = { path = "../hash-ir" }
hash-layout = { path = "../hash-layout" }
hash-pipeline = { path = "../hash-pipeline" }
hash-reporting = { path = "../hash-reporting" }
hash-source = { path = "../hash-source" }
hash-tir = { path = "../hash-tir" }
hash-tree-def = { path = "../hash-tree-def" }
hash-utils = { path = "../hash-utils" }

# Various stages that the pipeline interfaces with...
hash-ast-desugaring = { path = "../hash-ast-desugaring" }
hash-ast-expand = { path = "../hash-ast-expand" }
hash-backend = { path = "../hash-backend" }
hash-link = { path = "../hash-link" }
hash-lower = { path = "../hash-lower" }
hash-parser = { path = "../hash-parser" }
hash-semantics = { path = "../hash-semantics" }
hash-untyped-semantics = { path = "../hash-untyped-semantics" }
