[package]
name = "hash-driver"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
num_cpus = { workspace = true }
serde_json = { workspace = true }

hash-ast = { workspace = true }
hash-codegen = { workspace = true }
hash-ir = { workspace = true }
hash-messaging = { workspace = true }
hash-pipeline = { workspace = true }
hash-reporting = { workspace = true }
hash-repr = { workspace = true }
hash-source = { workspace = true }
hash-tir = { workspace = true }
hash-tree-def = { workspace = true }
hash-utils = { workspace = true }

# Various stages that the pipeline interfaces with...
hash-ast-desugaring = { workspace = true }
hash-ast-expand = { workspace = true }
hash-backend = { workspace = true }
hash-link = { workspace = true }
hash-lower = { workspace = true }
hash-parser = { workspace = true }
hash-semantics = { workspace = true }
hash-untyped-semantics = { workspace = true }

[features]
llvm = ["hash-backend/llvm"]
