[package]
name = "hash-exhaustiveness"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
derive_more = { workspace = true }

hash-ast = { workspace = true }
hash-ir = { workspace = true }
hash-reporting = { workspace = true }
hash-repr = { workspace = true }
hash-source = { workspace = true }
hash-storage = { workspace = true }
hash-target = { workspace = true }
hash-tir = { workspace = true }
hash-tir-utils = { workspace = true }
hash-utils = { workspace = true }
