[package]
name = "hash-fmt"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]

hash-ast = { path = "../hash-ast" }
hash-token = { path = "../hash-token" }
hash-utils = { path = "../hash-utils" }
hash-source = { path = "../hash-source" }
