[package]
name = "hash-interactive"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[dependencies]
rustyline = "8.0.0"
rayon = "1.5.0"

hash-ast = { path = "../hash-ast" }
hash-pipeline = {path = "../hash-pipeline" }
hash-reporting = {path = "../hash-reporting" }
hash-source = {path = "../hash-source" }

hash-parser = { path = "../hash-parser" }
hash-ast-desugaring = { path = "../hash-ast-desugaring" }
hash-ast-expand = { path = "../hash-ast-expand" }
hash-untyped-semantics = { path = "../hash-untyped-semantics" }
hash-typecheck = { path = "../hash-typecheck" }
hash-lower = { path = "../hash-lower" }
hash-vm = { path = "../hash-vm" }
