[package]
name = "hash-interactive"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[dependencies]
rayon = "1.5.0"
rustyline = "8.0.0"

hash-ast = { path = "../hash-ast" }
hash-pipeline = {path = "../hash-pipeline" }
hash-reporting = {path = "../hash-reporting" }
hash-source = {path = "../hash-source" }
hash-utils = {path = "../hash-utils" }
