[package]
name = "hash-intrinsics"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[dependencies]
derive_more = "0.99"
hash-ast = { path = "../hash-ast" }
hash-source = { path = "../hash-source" }
hash-target = { path = "../hash-target" }
hash-utils = { path = "../hash-utils" }
hash-types = { path = "../hash-types" }
