[package]
name = "hash-intrinsics"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
num-bigint = "0.4"
num_enum = "0.5"

hash-ast = { path = "../hash-ast" }
hash-attrs = { path = "../hash-attrs" }
hash-source = { path = "../hash-source" }
hash-storage = { path = "../hash-storage" }
hash-target = { path = "../hash-target" }
hash-tir = { path = "../hash-tir" }
hash-utils = { path = "../hash-utils" }
