[package]
name = "hash-ir-utils"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
html-escape = "0.2.12"

hash-ast = { path = "../hash-ast" }
hash-const-eval = { path = "../hash-const-eval" }
hash-ir = { path = "../hash-ir" }
hash-repr = {path = "../hash-repr" }
hash-source = { path = "../hash-source" }
hash-storage = { path = "../hash-storage" }
hash-target = { path = "../hash-target" }
hash-utils = { path = "../hash-utils" }
