[package]
name = "hash-ir-utils"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
derive_more = { workspace = true }
html-escape = { workspace = true }

hash-ast = { workspace = true }
hash-const-eval = { workspace = true }
hash-ir = { workspace = true }
hash-repr = { workspace = true }
hash-source = { workspace = true }
hash-storage = { workspace = true }
hash-target = { workspace = true }
hash-utils = { workspace = true }
