[package]
name = "hash-ir"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
fixedbitset = "0.4.2"

hash-ast = { path = "../hash-ast" }
hash-attrs = { path = "../hash-attrs" }
hash-const-eval = { path = "../hash-const-eval" }
hash-reporting = { path = "../hash-reporting" }
hash-source = { path = "../hash-source" }
hash-storage = { path = "../hash-storage" }
hash-target = { path = "../hash-target" }
hash-utils = { path = "../hash-utils" }
hash-layout = { path = "../hash-layout" }
