[package]
name = "hash-ir"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
fixedbitset = { workspace = true }

hash-ast = { workspace = true }
hash-attrs = { workspace = true }
hash-const-eval = { workspace = true }
hash-reporting = { workspace = true }
hash-source = { workspace = true }
hash-storage = { workspace = true }
hash-target = { workspace = true }
hash-utils = { workspace = true }
hash-repr = { workspace = true }
