[package]
name = "hash-layout"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
fixedbitset = "0.4.2"

hash-ir = { path = "../hash-ir" }
hash-storage = { path = "../hash-storage" }
hash-target = { path = "../hash-target" }
hash-source = { path = "../hash-source" }
hash-utils = { path = "../hash-utils" }
